--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com.airfranceklm.fasttrack</groupId>
 	<artifactId>assignment</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>AFKL FastTrack case</name>
-	<description></description>
+	<description>An API for registering holidays of KLM employees</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
